--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/mmsamara/liri-node-app#readme",
   "dependencies": {
+    "dotenv": "^5.0.1",
+    "node-spotify-api": "^1.0.7",
     "spotify": "^0.3.0",
     "twitter": "^1.7.1"
   }
